--- a/JS-DAY-4/index.html
+++ b/JS-DAY-4/index.html
@@ -6,14 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-
-    1. reverse the array by using push and pop method.
-    2. reemove all negative numbers . 
-    3. check if array is palindrome or not.
-    4. split even and odd number.
-    5. move all zeros to 
-
-    
     <script src="script.js"></script>
+   <!-- read and apply string methods . -->
 </body>
 </html>
